--- a/resources/css/partials/_variables.scss
+++ b/resources/css/partials/_variables.scss
@@ -1,9 +1,14 @@
 // variables
 
 $font-cabin: "Cabin", sans-serif;
+$font-georema: "Georama";
+$font-quicksand: "Quicksand";
 
 $white: #f0ebdd;
 $orange: #fd8152;
 $yellow: #f9ca56;
 $black: #252221;
 $grey: #b5aa99;
+$blue :#72a7e8;
+
+$gradient: linear-gradient(120deg, rgba(253,129,82,1) 0%, rgba(249,202,86,1) 100%);
