--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -7,4 +7,6 @@
 @import "partials/footer";
 @import "partials/responsive";
 @import "components/component";
+@import "components/button";
+@import "components/icon-list";
 @import "pages/page";
