--- a/public/themes/tompress/templates/layouts/base.twig
+++ b/public/themes/tompress/templates/layouts/base.twig
@@ -16,6 +16,20 @@
 	{% block content %}
 		Sorry, no content
 	{% endblock %}
+	        <div class="cursor">
+  <div class="cursor__ball cursor__ball--big ">
+    <svg height="40" width="40">
+      <circle cx="20" cy="20" r="15" stroke-width="0"></circle>
+    </svg>
+  </div>
+  
+  <div class="cursor__ball cursor__ball--small">
+    <svg height="15" width="15">
+      <circle cx="5" cy="5" r="10" stroke-width="0"></circle>
+    </svg>
+  </div>
+</div>
+
 </section>
 
 {% block footer %}
