--- a/resources/css/pages/page.scss
+++ b/resources/css/pages/page.scss
@@ -1,1 +1,42 @@
 // Pages styles
+
+/* Styles de base */
+.section-design, .section-dev {
+color: $white;
+    transition: all 0.3s ease;
+    .uagb-icon-list__label{
+font-size: 22px;
+    }
+
+}
+
+  
+  .section-dev {
+    background-color: $white !important;
+  }
+  
+  /* Classes pour les couleurs lors du hover */
+  .design-active {
+    background-color: $orange !important;
+    min-height: 70vh !important;
+    border-radius: 30px 30px 0px 0px !important;
+    .dev-active {
+        background-color: $white !important;
+        
+      }
+  }
+  
+  .dev-active {
+    background-color: $blue !important;
+ min-height: 70vh !important;
+ border-radius: 30px 30px 0px 0px !important;
+
+  }
+  
+
+  #who{
+    h3{
+        font-size: 22px;
+        letter-spacing: 6px;
+    }
+  }
