--- a/resources/css/partials/heading.scss
+++ b/resources/css/partials/heading.scss
@@ -1,1 +1,37 @@
 // heading styles
+h1{
+    font-family: $font-georema;
+    font-size: 147px;
+    font-weight: 700;;
+   
+    color: $black;
+    line-height: 1;
+  
+  }
+
+  h2{
+    font-family: $font-georema;
+    font-size: 130px;
+    font-weight: 700;;
+   
+    color: $black;
+    line-height: 1;
+  
+  }
+
+  h3{
+    font-family: $font-cabin;
+    font-size: 40px;
+    text-transform: uppercase;
+    letter-spacing: 20px;
+  }
+
+  h4{
+    font-size: 60px;
+    font-family: $font-georema;
+  }
+
+  h5{
+    font-family: $font-georema;
+    font-size: 30px;
+  }
