--- a/public/themes/tompress/templates/_partials/header.twig
+++ b/public/themes/tompress/templates/_partials/header.twig
@@ -1,4 +1,4 @@
-<header class="header" id="main-header">
+{# <header class="header" id="main-header">
 	{% block header %}
 		<div class="wrapper container-desktop">
 			<div class="hdr-nav">
@@ -14,4 +14,4 @@
 		</div>
 		<!-- Nav menu mobile -->
 	{% endblock %}
-</header>
+</header> #}
