--- a/public/themes/tompress/templates/layouts/base.twig
+++ b/public/themes/tompress/templates/layouts/base.twig
@@ -16,7 +16,7 @@
 	{% block content %}
 		Sorry, no content
 	{% endblock %}
-	        <div class="cursor">
+	<div class="cursor">
   <div class="cursor__ball cursor__ball--big ">
     <svg height="40" width="40">
       <circle cx="20" cy="20" r="15" stroke-width="0"></circle>
@@ -29,9 +29,43 @@
     </svg>
   </div>
 </div>
+    <div class="side-nav">
+
+<?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+<svg fill="#000000" width="800px" height="800px" viewBox="0 -2 28 28" xmlns="http://www.w3.org/2000/svg"><path d="m2.61 0h22.431c1.441 0 2.61 1.168 2.61 2.61s-1.168 2.61-2.61 2.61h-22.431c-1.441 0-2.61-1.168-2.61-2.61s1.168-2.61 2.61-2.61z"/><path d="m2.61 9.39h22.431c1.441 0 2.61 1.168 2.61 2.61s-1.168 2.61-2.61 2.61h-22.431c-1.441 0-2.61-1.168-2.61-2.61s1.168-2.61 2.61-2.61z"/><path d="m2.61 18.781h22.431c1.441 0 2.61 1.168 2.61 2.61s-1.168 2.61-2.61 2.61h-22.431c-1.441 0-2.61-1.168-2.61-2.61s1.168-2.61 2.61-2.61z"/></svg>
+        <ul>
+            <li><a href="#hero">Accueil</a></li>
+            <li><a href="#solutions-title">Services</a></li>
+            <li><a href="#comp-title">Compétences</a></li>
+            <li><a href="#who-title">Qui suis-je ?</a></li>
+            <li><a href="#portfolio-title">Portfolio</a></li>
+            <li><a href="#contact-title">Contact</a></li>
+        </ul>
+    </div>
 
 </section>
+{# <div class="mobile-maintenance">
 
+<?xml version="1.0" encoding="iso-8859-1"?>
+<!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+<svg height="800px" width="800px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+	 viewBox="0 0 512 512" xml:space="preserve">
+<path style="fill:#FFA055;" d="M467.862,512H44.138c-4.875,0-8.828-3.953-8.828-8.828v-17.655c0-4.875,3.953-8.828,8.828-8.828
+	h423.724c4.875,0,8.828,3.953,8.828,8.828v17.655C476.69,508.047,472.737,512,467.862,512z"/>
+<path style="fill:#FFB45A;" d="M269.3,0h-26.6c-7.819,0-14.707,5.143-16.928,12.64L88.276,476.69h335.448L286.228,12.64
+	C284.007,5.143,277.119,0,269.3,0z"/>
+<g>
+	<polygon style="fill:#FFEBBE;" points="171.975,194.207 340.025,194.207 319.101,123.586 192.899,123.586 	"/>
+	<polygon style="fill:#FFEBBE;" points="119.662,370.759 392.338,370.759 371.413,300.138 140.587,300.138 	"/>
+</g>
+<g>
+	<polygon style="fill:#FFA055;" points="219.055,35.31 292.945,35.31 287.714,17.655 224.286,17.655 	"/>
+	<polygon style="fill:#FFA055;" points="208.593,70.621 303.407,70.621 298.176,52.966 213.824,52.966 	"/>
+</g>
+</svg>
+La version mobile de ce site est actuellement en maintenance.<br/>
+Je vous invite à le consulter depuis un ordinateur ou une tablette.
+</div> #}
 {% block footer %}
 	<footer id="footer">
 		{% include './_partials/footer.twig' %}
@@ -39,4 +73,5 @@
 	{{ function('wp_footer') }}
 {% endblock %}
 </body>
+
 </html>
