--- a/resources/css/partials/heading.scss
+++ b/resources/css/partials/heading.scss
@@ -3,7 +3,6 @@ h1{
     font-family: $font-georema;
     font-size: 147px;
     font-weight: 700;;
-   
     color: $black;
     line-height: 1;
   
@@ -35,3 +34,27 @@ h1{
     font-family: $font-georema;
     font-size: 30px;
   }
+
+  @media (max-width: 1450px) {
+h2.uagb-heading-text{
+font-size: 100px;
+}
+h3.uagb-heading-text{
+  font-size: 30px;
+  letter-spacing: 15px;
+}
+h1.uagb-heading-text{
+  font-size: 110px;
+}
+  }
+
+  @media (max-width: 768px) {
+    
+    h2.uagb-heading-text{
+      font-size: 40px;
+      }
+      h3.uagb-heading-text{
+        font-size: 28px;
+        letter-spacing: 2px;
+      }
+}
