--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -7,6 +7,10 @@
 @import "partials/footer";
 @import "partials/responsive";
 @import "components/component";
+@import "components/tabs";
 @import "components/button";
+@import "components/navbar";
 @import "components/icon-list";
+@import "components/carousel";
 @import "pages/page";
+@import "pages/article";
